# l5e-cs/src/app/api/entries/route.ts
@@ -13,13 +13,13 @@ type CreateEntryResponse = {
 };
 
 /**
- * Create a new life data entry 
+ * Create a new life data entry
  * @description Fetches detailed user information by ID
- * @response CreateEntryResponse 
+ * @response CreateEntryResponse
  * @body CreateEntryRequest
  * @bodyDescription CreateEntryRequest with eventType, occurredAt and data: json payload
  * @openapi
- */export async function POST(req: Request) {
+ */ export async function POST(req: Request) {
   const body = await req.json();
 
   const entryId = crypto.randomUUID();
@@ -48,4 +48,23 @@ type CreateEntryResponse = {
   await db.collection("events").insertOne(event);
 
   return NextResponse.json({ id: entryId });
+}
+
+type GetEntryResponse = {
+  event: CreateEntryEvent[];
+};
+
+/**
+ * Fetches all life data entries
+ * @description Fetches all life data entries
+ * @response GetEntryResponse
+ * @openapi
+ */
+export async function GET() {
+  const client = await clientPromise;
+  const db = client.db("l5e-es");
+
+  const entries = await db.collection("events").find({}).toArray();
+
+  return NextResponse.json(entries);
 }
